<resources>
    <string name="app_name">Ribbit</string>


    <string name="title_section1">INBOX</string>
    <string name="title_section2">FRIENDS</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_done">Done!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Sign in</string>
    <string name="sign_up_text">Don\'t have an account?  Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="username_login_hint">Enter a Username</string>
    <string name="email_field">Enter a valid E-Mail address</string>
    <string name="signup_button_label">Sign up!</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address</string>
    <string name="signup_error_title">oops!</string>
    <string name="login_error_message">Please enter a valid username/password</string>
    <string name="action_logout">Log out</string>
    <string name="no_messages">No new messages</string>
    <string name="no_friends">You have no friends, add some!</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage!</string>
    <string name="general_error">Sorry, there was an error.</string>
    <string name="file_not_found_error">File not found!</string>
    <string name="io_error">there was an Input/Output error</string>
    <string name="file_size_error">Your file was too large, please pick a file under 10 MB!</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list">Choose some friends. . .</string>
    <string name="send_button_label">Send</string>
    <string name="video_size_request">Please select a video under 10 MB in size.</string>
    <string name="error_selecting_file">There was an error with the file selected.  Please select a different file.</string>
    <string name="sorry">We/\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message.  Please try again.</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="yukidev">A YukiDev Project</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="send_button_content_description">sendbutton</string>
    <string name="push_message">You have a new Ribbit message from %s!</string>
    <string name="add_friends_toast_label">Now add friends with the dropdown menu next to the camera!</string>
    <string name="new_user_log_in_toast">Account created! Log in. . .</string>

</resources>
