<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AuthBackground"
                tools:context="jameshigashiyama.com.ribbit.ui.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundFrog"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:text="@string/app_name"
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:text="@string/yukidev"
        android:id="@+id/subtitle"
        style="@style/DevTitle"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/AuthLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameField"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/username_login_hint"
            android:textSize="22sp"/>
        <requestFocus />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:layout_below="@+id/usernameField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/password_hint"
            android:textSize="22sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/email_field"
            android:textSize="22sp"/>
    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/linearLayout"
    >

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight="1"
>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_button_label"
            android:id="@+id/signupButton"
            android:textSize="20sp"
            android:textColor="@color/text_color"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_custom"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_label"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="20sp"
            android:textColor="@color/text_color"
            android:background="@drawable/button_custom"
            android:id="@+id/cancelButton"/>
    </LinearLayout>
</LinearLayout>

<ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpProgressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"/>
</RelativeLayout>
